--- a/index.html
+++ b/index.html
@@ -120,6 +120,33 @@
                 <div class="project-cards-container">
 
                     <div class="card">
+                        <img src="./img/wordle.gif"
+                            alt="Project Preview Screenshot" class="card-preview-img">
+                        <div class="card-info">
+                            <div class="title-and-links">
+                                <span class="project-title">
+                                    Tips & Tricks for Enhancing Your Wordle Skills
+                                </span>
+                                <div class="project-links">
+                                    <a href="https://sarahgrevy.github.io/wordle">
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                    <a href="https://github.com/SarahGrevy">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="project-skills">
+                                <span>BeautifulSoup</span>
+                                <span>Regex</span>
+                            </div>
+                            <p class="project-description">
+                                Why you should go for words that start S and ends with Y
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="card">
                         <img src="./img/co2.png"
                             alt="Project Preview Screenshot" class="card-preview-img">
                         <div class="card-info">
@@ -147,6 +174,8 @@
                             </p>
                         </div>
                     </div>
+
+            
 
                     <div class="card">
                         <img src="./img/SC_2021.png"
