--- a/wordle.html
+++ b/wordle.html
@@ -71,7 +71,7 @@
           flex: 1;
      }
 
-     @media (max-width: 80%) {
+     @media (max-width: 60%) {
           .row-container {
                flex-direction: column;
             
@@ -99,7 +99,7 @@
 
                 
                 <div class="landing-page-details">
-                    <h1 class="small-title"> Tips & Tricks to Enhancing Your Wordle Skills <h1>
+                    <h1 class="small-title"> Tips & Tricks for Enhancing Your Wordle Skills <h1>
                     <br>
                     <p>It’s been a tough couple of months for Sudoku, Spelling Bee, and The Crossword which in January of this year were faced with their own internal competition, namely the up-and-coming word game: Wordle. </p>
                     <br>
@@ -111,14 +111,14 @@
                     <br>
                     <p>But I wanted to take this one step further to enhance my chances of getting it right (ideally on the third try). Fortunately, Wordle published a file containing all the possible correct solutions to each day's problem. There are in total 2,252 possible words. By analyzing this file, we can see what letters are used the more frequently overall:  </p>
                     <br>
-
-                    <img src="./img/wordle-bar2.svg" class =media><br>
+                    <img src="./img/wordle-bar2.svg" class =graph><br>
                     <br>
                     <p>The letters E and A show up in about 20% of all Wordle solutions whereas letters such as Q and J show up in less than 2% of the times. A good strategy is to find a five letter word that contains some of the most frequent letters. The best word I can come up with is “OTHER” which has four letters in top five most frequently used. </p>
                     <br>
                     <p>Let’s take this one step further and look at what letters are the most common in each of the five sloths. Intuitively, we know that more words end rather than start with the letter Y but for other letters such as D and H it’s harder to imagine wherein a word they’re most likely to appear. The heatmap below shows the likelihood of each letter to appear in each of the five sloths. The darker the color, the more likely the letter is to be in a slot.</p>
-
-                    <img src="./img/wordle-heatmap6.svg" class =graph>
+                    <br>
+                   <!-- <img src="./img/wordle-heatmap6.svg" class =graph>-->
+                    <div class="flourish-embed flourish-heatmap" data-src="visualisation/8940363"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
                     <br>
                     <p>Based on this analysis we can conclude that: S is the most common first letter; A is the most common second letter, A is the most command third letter; E is most command fourth letter; and E/Y are the most common fifth letter</p>
                     <br>
