--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                                     Poem Analysis 
                                 </span>
                                 <div class="project-links">
-                                    <a href="https://github.com/SarahGrevy">
+                                    <a href="https://github.com/SarahGrevy/Poem_Analysis">
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
                                     <a href="https://github.com/SarahGrevy/Poem_Analysis">
