--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
                                     The Pandemic Decreased Global CO₂ Emissions, But Only by a Little
                                 </span>
                                 <div class="project-links">
-                                    <a href="https://sarahgrevy.github.io/co2_emission">
+                                    <a href="https://sarahgrevy.github.io/co2-emission">
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
-                                    <a href="https://github.com/SarahGrevy/co2_emission">
+                                    <a href="https://github.com/SarahGrevy/co2-emission">
                                         <i class="fab fa-github"></i>
                                     </a>
                                 </div>
@@ -281,7 +281,7 @@
                                     Weather Analysis: Denmark VS United States 
                                 </span>
                                 <div class="project-links">
-                                    <a href="https://sarahgrevy.github.io/weather_project">
+                                    <a href="https://sarahgrevy.github.io/weather-project">
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
                                     <a href="https://github.com/SarahGrevy/weather/tree/main">
