--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                     Air Quality Around the World 
                                 </span>
                                 <div class="project-links">
-                                    <a href="https://sarahgrevy.github.io/weather-project">
+                                    <a href="https://sarahgrevy.github.io/airquality/">
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
                                     <a href="https://github.com/SarahGrevy/airquality">
