--- a/women-in-art.html
+++ b/women-in-art.html
@@ -121,7 +121,7 @@
                   <br>
                    <div class="flourish-embed flourish-chart" data-src="visualisation/9703835"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
                     <br>
-                    <p>Art is notoriously difficult to value and it is widely recognized that factors such as taste play an important role in setting prices. However, multiple studies have made it clear that gender should not impact the value of art. The observed price difference between genders simply reflects a bias towards women. </p>
+                    <p>Art is notoriously difficult to value and it is widely recognized that factors such as taste play an important role in setting prices. However, multiple studies have made it clear that gender should not impact the quality of art. The observed price difference between genders simply reflects a bias towards women. </p>
                 <br><p>It’s summed up best by the NYT art critique, Greg Allen: </p><br>
                 <p>“Asking why women's art sells for less than men's elicits a long and complex
                     answer, with endless caveats, entirely germane qualifiers and diverse,
