--- a/index.html
+++ b/index.html
@@ -120,6 +120,33 @@
                 <div class="project-cards-container">
 
                     <div class="card">
+                        <img src="./img/art.jpg"
+                            alt="Project Preview Screenshot" class="card-preview-img">
+                        <div class="card-info">
+                            <div class="title-and-links">
+                                <span class="project-title">
+                                    37 Years after the Guerrilla Girls 🦍, the Fight for Gender Representation in the Art World Continues
+                                </span>
+                                <div class="project-links">
+                                    <a href="https://sarahgrevy.github.io/women-in-art">
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                    <a href="https://github.com/SarahGrevy/moma/blob/main/artworks.ipynb">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="project-skills">
+                                <span>BeautifulSoup</span>
+                                <span>Regex</span>
+                            </div>
+                            <p class="project-description">
+                                Today, things appear more positive for women artists. But it is a minimal improvement that continues to be overshadowed by male dominance in major areas of the art world
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="card">
                         <img src="./img/wordle.gif"
                             alt="Project Preview Screenshot" class="card-preview-img">
                         <div class="card-info">
@@ -141,10 +168,12 @@
                                 <span>Regex</span>
                             </div>
                             <p class="project-description">
-                                Why you should go for words that start S and ends with Y
+                                Why you should go for words that start with S and ends with Y
                             </p>
                         </div>
                     </div>
+
+                    
 
                     <div class="card">
                         <img src="./img/SC_2021.png"
