--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                                 </div>
                             </div>
                             <div class="project-skills">
-                                <span>BeautifulSoup</span>
-                                <span>Regex</span>
+                                <span>Python</span>
+                                <span>Pandas</span>
                             </div>
                             <p class="project-description">
                                 Today, things appear more positive for women artists. But it is a minimal improvement that continues to be overshadowed by male dominance in major areas of the art world
