--- a/women-in-art.html
+++ b/women-in-art.html
@@ -107,7 +107,7 @@
                     <br>   
                     <p>Gender inequality has slightly decreased in major NYC museums since the establishment of the Guerrilla Girls. For instance, artworks by women artists in MoMA’s art collection increased from 8 percent in 1985 to 18 percent in 2021. Since museums are one of the greatest trendsetters in the artworld, one would expect a similar trend regarding arts bought on the market. And indeed, an analysis of artworks being sold at one of New York’s biggest auction dealers, Christie's, shows this trend for women artists.</p> 
                     <br>
-                    <p>In 1985, female-art sold at prices about 46% lower than comparative pieces of art by male artists and below their estimated price. In contrast, pieces of art by male artists typically sold about 35 percent above valuations. Cut to 2021, and things are looking less dark, but not significantly different. Today, on average, people buy creations by female artists for 29 percent above the valuations and pieces of art for 46 percent above its valued price.</p>
+                    <p>In 1985, female-art sold at prices about 46% lower than comparative pieces of art by male artists and below their estimated price. In contrast, pieces of art by male artists typically sold about 35 percent above valuations. Cut to 2021, and things are looking less dark, but not significantly different. Today, on average, people buy creations by female artists for 29x percent above the valuations and pieces of art for 46 percent above its valued price.</p>
                     <br>
                     </p> <br>
                    <!-- <img src="./img/wordle-heatmap6.svg" class =graph>-->
