--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                     37 Years after the Guerrilla Girls 🦍, the Fight for Gender Representation in the Art World Continues
                                 </span>
                                 <div class="project-links">
-                                    <a href="https://sarahgrevy.github.io/women-in-art">
+                                    <a href="https://daisy-attention-f69.notion.site/Art-draft-7e31efdc0a2347f191a6e977b0c5876e">
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
                                     <a href="https://github.com/SarahGrevy/moma/blob/main/artworks.ipynb">
