--- a/index.html
+++ b/index.html
@@ -147,6 +147,31 @@
                     </div>
 
                     <div class="card">
+                        <img src="./img/seneca_village.png"
+                            alt="Project Preview Screenshot" class="card-preview-img">
+                        <div class="card-info">
+                            <div class="title-and-links">
+                                <span class="project-title">
+                                    The Rise and Fall of Seneca Village 🌳
+                                </span>
+                                <div class="project-links">
+                                    <a href="https://daisy-attention-f69.notion.site/The-Rise-and-Fall-of-Seneca-Village-1293b7123e8b43598d1711277b0158d8">
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                   
+                                </div>
+                            </div>
+                            <div class="project-skills">
+                             
+                            </div>
+                            <p class="project-description">
+                                How a community of Black New Yorkers was destroyed to make room for Central Park
+                            </p>
+                        </div>
+                    </div>
+
+
+                    <div class="card">
                         <img src="./img/wordle.gif"
                             alt="Project Preview Screenshot" class="card-preview-img">
                         <div class="card-info">
