--- a/index.html
+++ b/index.html
@@ -170,6 +170,30 @@
                         </div>
                     </div>
 
+                    <div class="card">
+                        <img src="./img/cars.png"
+                            alt="Project Preview Screenshot" class="card-preview-img">
+                        <div class="card-info">
+                            <div class="title-and-links">
+                                <span class="project-title">
+                                    New York City Welcomes Electric Vehicles, But at What Cost? 🚗
+                                </span>
+                                <div class="project-links">
+                                    <a href="https://daisy-attention-f69.notion.site/New-York-City-Welcomes-Electric-Vehicles-But-at-What-Cost-ff5b2494c2c5432280edc90252164a5a">
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                   
+                                </div>
+                            </div>
+                            <div class="project-skills">
+                             
+                            </div>
+                            <p class="project-description">
+                                Over the next decade, New York City will take some of the first steps to transition to a fully electrified transportation system.
+                            </p>
+                        </div>
+                    </div>
+
 
                     <div class="card">
                         <img src="./img/wordle.gif"
