--- a/index.html
+++ b/index.html
@@ -194,6 +194,30 @@
                         </div>
                     </div>
 
+                    <div class="card">
+                        <img src="./img/bridge.png"
+                            alt="Project Preview Screenshot" class="card-preview-img">
+                        <div class="card-info">
+                            <div class="title-and-links">
+                                <span class="project-title">
+                                    Will Congestion Pricing Turn Upper Manhattan Into a Parking Lot? 🏙️
+                                </span>
+                                <div class="project-links">
+                                    <a href="https://daisy-attention-f69.notion.site/Will-Congestion-Pricing-Turn-Upper-Manhattan-Into-a-Parking-Lot-db22a00aa2ac497da1227776a159278c">
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                   
+                                </div>
+                            </div>
+                            <div class="project-skills">
+                             
+                            </div>
+                            <p class="project-description">
+                                After a two-year delay under the Trump administration, New York City has finally kick-started the Metropolitan Transportation Authority’s congestion pricing plan that will impose tolls on all bridges to the city’s Central Business Distric south of 60th Street.
+                            </p>
+                        </div>
+                    </div>
+
 
                     <div class="card">
                         <img src="./img/wordle.gif"
