--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <section class="projects" id="select-projects">
                 <h2>Select Projects</h2>
                 <p class="section-description">
-                    Here are some of the projects I have worked on.<br>
+                    Here are some of the projects I have worked on for my classes at Columbia.<br>
                     You can find more on <a class="hyperlink"
                                            
                         href="https://github.com/SarahGrevy">GitHub</a>.
