--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                                     E-scooters, But Not Safe Roads, are Taking Over The Bronx 🛴
                                 </span>
                                 <div class="project-links">
-                                    <a href="https://twitter.com/dickinson_rnn">
+                                    <a href="https://daisy-attention-f69.notion.site/E-scooters-Although-Not-Safe-Roads-are-Taking-Over-The-Bronx-99b94bf7b1f246f1bdd49a593458c58e">
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
                                     <a href="https://daisy-attention-f69.notion.site/E-scooters-But-Not-Safe-Roads-are-Taking-Over-The-Bronx-99b94bf7b1f246f1bdd49a593458c58e">
