--- a/pointsunknown.html
+++ b/pointsunknown.html
@@ -154,7 +154,7 @@
                                     County Typology Codes
                                 </span>
                                 <div class="project-links">
-                                    <a href="https://sarahgrevy.github.io/typologymap/">
+                                    <a href="https://sarahgrevy.github.io/typology_maps/">
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
                                     <a href="https://github.com/SarahGrevy/typologymap">
