--- a/pointsunknown.html
+++ b/pointsunknown.html
@@ -146,7 +146,7 @@
                     </div>
 
                     <div class="card">
-                        <img src="./img/map2.png"
+                        <img src="./img/pol.png"
                             alt="Project Preview Screenshot" class="card-preview-img">
                         <div class="card-info">
                             <div class="title-and-links">
