--- a/pointsunknown.html
+++ b/pointsunknown.html
@@ -173,6 +173,34 @@
                     </div>
 
                     <div class="card">
+                        <img src="./img/wind.png"
+                            alt="Project Preview Screenshot" class="card-preview-img">
+                        <div class="card-info">
+                            <div class="title-and-links">
+                                <span class="project-title">
+                                    India’s Wind Power Sector Falls Behind Other Countries
+                                </span>
+                                <div class="project-links">
+                                    <a href="https://sarahgrevy.github.io/energy/">
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                    <a href="https://github.com/SarahGrevy/energy">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="project-skills">
+                                <span>MapBox</span>
+                            
+                            </div>
+                            <p class="project-description">
+                                Until recent years, India used to be one of the leading countries in the world in regards to wind power. However, the country saw its biggest decline in annual wind power generated this year with a 26 percent drop since the same time in 2021.
+                            </p>
+                        </div>
+                    </div>
+
+
+                    <div class="card">
                         <img src="./img/bike.png"
                             alt="Project Preview Screenshot" class="card-preview-img">
                         <div class="card-info">
