--- a/pointsunknown.html
+++ b/pointsunknown.html
@@ -120,6 +120,33 @@
                 <div class="project-cards-container">
 
                     <div class="card">
+                        <img src="./img/fire.png"
+                            alt="Project Preview Screenshot" class="card-preview-img">
+                        <div class="card-info">
+                            <div class="title-and-links">
+                                <span class="project-title">
+                                    Homes in Northern California Face Biggest Fire Consequences
+                                </span>
+                                <div class="project-links">
+                                    <a href="https://sarahgrevy.github.io/firedamage//">
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                    <a href="https://sarahgrevy.github.io/firedamage/">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="project-skills">
+                                <span>MapBox</span>
+                            
+                            </div>
+                            <p class="project-description">
+                                Homes in the northern part of California are more likely to experience severe fire consequences if a fire should occur there relative to other areas in the state.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="card">
                         <img src="./img/map.png"
                             alt="Project Preview Screenshot" class="card-preview-img">
                         <div class="card-info">
@@ -171,6 +198,8 @@
                             </p>
                         </div>
                     </div>
+
+                   
 
                     <div class="card">
                         <img src="./img/wind.png"
