--- a/pointsunknown.html
+++ b/pointsunknown.html
@@ -128,10 +128,10 @@
                                     Homes in Northern California Face Biggest Fire Consequences
                                 </span>
                                 <div class="project-links">
-                                    <a href="https://sarahgrevy.github.io/firedamage//">
+                                    <a href="https://sarahgrevy.github.io/fire-consequnces/">
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
-                                    <a href="https://sarahgrevy.github.io/firedamage/">
+                                    <a href="https://sarahgrevy.github.io/fire-consequnces/">
                                         <i class="fab fa-github"></i>
                                     </a>
                                 </div>
