--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
                 </p>
                 <div class="profile-container">
                     <div class="me-icon-container">
-                        <img class="me-icon" src="./img/me.png"
+                        <img class="me-icon" src="./img/sarah.png"
                             alt="me"
                             title="me.">
                         <br> <div></div>
@@ -144,7 +144,7 @@
                         
                         <div class="card-info">
                             <h4 class="green">M.S. Data Journalism</h4>
-                            <p class="date">2021 - present </p>
+                            <p class="date">2021 - 2022 </p>
                             <p>Columbia University<br>
                                 NYC</p>
                         </div>
@@ -170,14 +170,12 @@
                     <h3>Experience</h3>
                     <div class="education-experience-card">
                         <div class="card-info">
-                            <h4 class="green">Computational Research Assistant</h4>
-                            <p class="date">Dec 2022 - Present</p>
+                            <h4 class="green">Computational Investigative Fellow</h4>
+                            <p class="date">Sep 2022 - present </p>
                             <p><a href="https://towcenter.columbia.edu/">Tow Center for Digital Journalism</a><br>
                                 </p>
                         </div>
-                        <div class="card-description">
-                            <p><em>to be updated*</em></p>
-                        </div>
+                        
                     </div>
                     <div class="education-experience-card">
                         <div class="card-info">
