--- a/about.html
+++ b/about.html
@@ -73,7 +73,8 @@
                     <div class="me-icon-container">
                         <img class="me-icon" src="./img/sarah.png"
                             alt="me"
-                            title="me.">
+                            title="me."
+                            width=50%>
                         <br> <div></div>
                     </div>
                     <div> </div>
