--- a/co2-emission.html
+++ b/co2-emission.html
@@ -75,6 +75,8 @@
                      <p>
                         Global CO₂ emissions fell by 6.4% or 2.3 billion tons in 2020. This is a significant shift considering most countries in the world have seen a steady increase in emissions every year during the past decades. It wasn’t until the Paris Agreement in 2016 that world leaders decided to at least try to slow down the rapid increase in emissions. And yet, the pandemic by far outperformed the Paris Agreement in slowing down emissions. Still though, the decrease wasn't as big as many climate scientists had predicted based on the pandemic's significant projected impact on people's day-to-day lives.                     </p>
                     <br> <div class="flourish-embed flourish-map" data-src="visualisation/8729423"><script src="https://public.flourish.studio/resources/embed.js"></script></div>     
+                    <img alt = "Graph showing that the E, A and R are the most frequently used letters in Wordle" src="./img/co2.svg" width=80%, height=80%, class =graph><br>
+
                     <br>
                     <P>
                         Which countries saw the biggest decrease in CO₂ emissions? As you can see in the map above, almost every country saw a decrease but some more than others. Blue colors indicate that emissions were lower than before the pandemic. Red colors indicate they were higher. The darker the color, the higher or lower the emission changes. For instance, the U.S. saw a change of -10% which means it produced 10% less emission gasses in 2020 than in 2019 (hence it's color changed from baby blue to deep blue). Likewise, most countries in Europe saw significant reductions. Greece, for instance, saw an 18% drop and Spain 17%                    </P>
