--- a/wordle.html
+++ b/wordle.html
@@ -118,7 +118,12 @@
                     <p>Let’s take this one step further and look at what letters are the most common in each of the five sloths. Intuitively, we know that more words end rather than start with the letter Y but for other letters such as D and H it’s harder to imagine wherein a word they’re most likely to appear. The heatmap below shows the likelihood of each letter to appear in each of the five sloths. The darker the color, the more likely the letter is to be in a slot.</p>
                     <br>
                    <!-- <img src="./img/wordle-heatmap6.svg" class =graph>-->
-                    <div class="flourish-embed flourish-heatmap" data-src="visualisation/8940363"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+                    <!-- <div class="flourish-embed flourish-heatmap" data-src="visualisation/8940363"><script src="https://public.flourish.studio/resources/embed.js"></script></div> -->
+                    <p>The depth of the color represents the frequency of the letter used in one of the five slots. The deeper the color, the more frequently it appears. Some words are more likely to appear than others. Based on this analysis, likely words to appear are: sadly, shady, and shaky
+                    </p>
+                    <br>
+                    <img alt = "Graph showing that the E, A and R are the most frequently used letters in Wordle" src="./img/wordle-box.svg" width= 1000px, class =graph><br>
+
                     <br>
                     <p>Based on this analysis we can conclude that: S is the most common first letter; A is the most common second letter, A is the most command third letter; E is most command fourth letter; and E/Y are the most common fifth letter</p>
                     <br>
